# cftable

./: .gitignore  LICENSE  README.md  example_input.template.yaml  example_input.yaml  main.py  output.csv  pyproject.toml  requirements.txt  test_template.csv
.github/workflows/: test.yml
cftable/: __init__.py  account.py  cli.py  models.py  output.py  simulator.py
config/: example_input.yaml
docs/: system_specification.md
template/: example_input.template.yaml
tests/: test_age_entries.py  test_cli.py  test_graph_output.py  test_integration.py  test_ods_output.py  test_output.py  test_recurring_entries.py  test_simulator.py
