[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cftable"
version = "0.99.0"
description = "Cash Flow Simulation Tool"
readme = "README.md"
keywords = ["cash flow", "simulation", "finance"]
authors = [
    {name = "Hiroshi Miura", email = "miurahr@linux.com"}
]
license = {text = "MIT"}
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "PyYAML>=6.0",
    "matplotlib>=3.7.0",
    "odfpy>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/miurahr/CFtable"
Repository = "https://github.com/miurahr/CFtable"
Issues = "https://github.com/miurahr/CFtable/issues"

[project.scripts]
cftable = "cftable.cli:run_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cftable*"]

[tool.tox]
legacy_conf_dict = { "tox" = { "envlist" = "py314" } }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox.env.py314]
deps = [
    "pytest",
    "pytest-mock",
    "PyYAML",
    "matplotlib",
    "odfpy"
]
commands = [
    ["pytest", "{posargs}"]
]
